--- a/Popochan/App.config
+++ b/Popochan/App.config
@@ -7,7 +7,7 @@
   <appSettings>
     <add key="AccessToken" value="" />
     <add key="AccessTokenSecret" value="" />
-    <add key="DiscordToken" value="Mzc1MTQ0NjY5MjY2NDQ0Mjg4.DNrnnw.AUW4ac7Pw-IsP9UGfPCQAgLBI8Y" />
+    <add key="DiscordToken" value="" />
     <add key="botPoints" value="0" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
